Fixed invisible axis bug. Implemented line drawing delay.

--- a/css/chart.css
+++ b/css/chart.css
@@ -46,7 +46,8 @@ div.tooltip {
 }
 
 .postsRelated {
-    margin: 20px;
+    margin: 0px 20px 20px 20px;
+    padding-top: 0px;
     float: left;
     min-width: 200px;
     max-width: 600px;
